[package]
name = "tlsurvey"
version = "0.1.0"
authors = ["MMB2 <git@mmb2.click>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hashbrown = { version = "0.8", features = ["serde"] }
chrono = {version = "0.4", features = ["serde"]}
fasthash = "0.4"